fix: from real use case feedbacks
